--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -10,8 +10,8 @@ env:
   JRELEASER_GPG_PASSPHRASE: ${{ secrets.SIGNING_SECRET_JRELEASER }}
   JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
   JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-  JRELEASER_MAVENCENTRAL_USERNAME: "Aed3n8OY"
-  JRELEASER_MAVENCENTRAL_PASSWORD: "vOEoV9G6L5dZHdDdQVv509RgN6rhYCiFF11zPF9PWl6e"
+  JRELEASER_MAVENCENTRAL_USERNAME: ${{ secrets.MAVENCENTRAL_USERNAME }}
+  JRELEASER_MAVENCENTRAL_PASSWORD: ${{ secrets.MAVENCENTRAL_PASSWORD }}
 
 jobs:
   build:
