ci: add rustflags for Android targets in build-release workflow

--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -76,15 +76,19 @@ jobs:
           echo '[target.armv7-linux-androideabi]' >> ~/.cargo/config
           echo 'ar = "/Users/runner/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/llvm-ar"' >> ~/.cargo/config
           echo 'linker = "/Users/runner/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/armv7a-linux-androideabi22-clang"' >> ~/.cargo/config
+          echo 'rustflags = ["-C", "link-arg=-Wl,-z,max-page-size=16384"]' >> ~/.cargo/config
           echo '[target.aarch64-linux-android]' >> ~/.cargo/config
           echo 'ar = "/Users/runner/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/llvm-ar"' >> ~/.cargo/config
           echo 'linker = "/Users/runner/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android29-clang"' >> ~/.cargo/config
+          echo 'rustflags = ["-C", "link-arg=-Wl,-z,max-page-size=16384"]' >> ~/.cargo/config
           echo '[target.i686-linux-android]' >> ~/.cargo/config
           echo 'ar = "/Users/runner/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/llvm-ar"' >> ~/.cargo/config
           echo 'linker = "/Users/runner/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android29-clang"' >> ~/.cargo/config
+          echo 'rustflags = ["-C", "link-arg=-Wl,-z,max-page-size=16384"]' >> ~/.cargo/config
           echo '[target.x86_64-linux-android]' >> ~/.cargo/config
           echo 'ar = "/Users/runner/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/llvm-ar"' >> ~/.cargo/config
           echo 'linker = "/Users/runner/Library/Android/sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/darwin-x86_64/bin/x86_64-linux-android29-clang"' >> ~/.cargo/config
+          echo 'rustflags = ["-C", "link-arg=-Wl,-z,max-page-size=16384"]' >> ~/.cargo/config
           cat ~/.cargo/config
 
       - name: Build TCX And IKC
