--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     name: Build Android Release
     if: github.event.review.state == 'approved'
-    runs-on: macos-13
+    runs-on: macos-latest
     steps:
       - name: Get the latest commit SHA
         id: sha
