--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     name: Build iOS Release
     if: github.event.review.state == 'approved'
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - name: Get the latest commit SHA
         id: sha
