--- a/.github/workflows/run-unittest.yml
+++ b/.github/workflows/run-unittest.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   build:
     name: Run Tcx Unit Testing
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - name: Get the latest commit SHA
         id: sha
