chore: update Rust toolchain and add new finite field library 'fff'
- Updated the Rust toolchain version in CI workflows for Android and iOS builds to support aarch64 architecture.
- Introduced a new finite field library 'fff' with its own dependencies, build scripts, and documentation.
- Added necessary files including README, LICENSE, and .gitignore for the new library.
- Implemented assembly functions for optimized arithmetic operations in the finite field.
- Updated Cargo.toml and Cargo.lock to include the new library and its dependencies.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,6 @@ members = [
     "imkey-core/ikc-wallet/coin-filecoin",
     "imkey-core/ikc-wallet/coin-btc-fork",
 ]
+
+[patch.crates-io]
+fff = { path = "token-core/tcx-libs/fff" }
